# guest-processing

./: .gitignore  AI_FEATURES_REFERENCE.md  AI_FRONTEND_INTEGRATION.md  AI_UI_VISUAL_GUIDE.md  ARCHITECTURE_DIAGRAMS.md  CLEANUP_SUMMARY.md  COLUMN_NAME_FIX.md  COMPLETE_SOLUTION_SUMMARY.py  CSV_IMPORT_FIX_SUMMARY.md  DASHBOARD_VERIFICATION.py  DEPLOYMENT_VERIFICATION.md  DUPLICATE_PREVENTION_SUMMARY.md  EMAIL_FEATURES.md  ENHANCEMENT_SUMMARY.md  FINAL_CLEANUP.md  FINAL_REFACTORING_PLAN.md  FINAL_VERIFICATION.py  GMAIL_SETUP.md  GOOGLE_OAUTH_TESTING_MODE_SOLUTIONS.md  Guest Database Manager - Advanced.command  Guest Database Manager - Fixed.command  Guest Database Manager.bat  Guest Database Manager.command  KEYERROR_FIX_SUMMARY.py  LAUNCHER_README.md  LAUNCHER_VERIFICATION.md  MIGRATION_GUIDE.md  Makefile  PRODUCTION_AI_FEATURES.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  RAILWAY_DEPLOYMENT.md  RAILWAY_START_COMMAND.md  README.md  REBUILT_EXECUTABLES.md  REFACTORING_COMPLETE.md  REFACTORING_EXECUTION_COMPLETE.md  REFACTORING_SUMMARY.md  SERVICE_ACCOUNT_SETUP.md  (+54 more)
Guest Database Manager.app/Contents/: Info.plist
Guest Database Manager.app/Contents/MacOS/: Guest Database Manager
src/guest_database_manager/: __about__.py  __init__.py  ai_assistant.py  app.py  ask_mirror_talk_client.py  cli.py  config_manager.py  constants.py  data_mapper.py  database.py  database_backup.py  email_manager.py  episode_planner.py  file_reader.py  google_calendar_sync.py  google_service_account_calendar.py  guest_recommender.py  guest_research.py  msforms_importer.py  openai_scheduling_copilot.py  performance_optimizer.py  schema_manager.py  smart_features.py  web_interface.py
src/guest_database_manager/static/: app.js  booking.css  booking.html  booking.js  dashboard-login.html  index.html  intake.css  intake.html  intake.js  operations.css  operations.html  operations.js  performance-utils.js  planning.html  planning.js  styles.css
tests/: __init__.py  conftest.py  test_cli.py  test_database.py  test_web_interface.py
wordpress/mirror-talk-guest-intake/: README.md  mirror-talk-guest-intake.php
wordpress/mirror-talk-guest-intake/assets/css/: mirror-talk-guest-intake.css
wordpress/mirror-talk-guest-intake/assets/js/: mirror-talk-guest-intake.js
wordpress/mirror-talk-intake-bridge/: mirror-talk-intake-bridge.php
